<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint_dialog"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_director"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etDialogDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/director_hint_dialog"
        android:inputType="text"
        android:textSize="16sp" />

</LinearLayout>